--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
-    <title>React App</title>
+    <head>
+      <meta charset="UTF-8" />
+      <title>Mike B. || Full-Stack Engineer</title>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- CSS only -->
+      <link rel="stylesheet" href="css/style.css" />
+      <!-- Google Fonts -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=GFS+Didot&family=Lato:wght@400;700&family=Vollkorn:wght@400;700;900&display=swap" rel="stylesheet">
+      <!-- Font Awesome -->
+      <script src="https://kit.fontawesome.com/932d995d86.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
