--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <!-- CSS only -->
       <link rel="stylesheet" href="css/style.css" />
+      <link rel="icon" href="GroovyLogo.ico" type="image/x-icon"/>
       <!-- Google Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
